Impressum und Info Bilder

--- a/Zeltwiese.html
+++ b/Zeltwiese.html
@@ -117,7 +117,6 @@
                         <li class="impressum-items text-font" style="display: none">Berufsbezeichnung und Mitgliedsstaat</li>
                         <li class="impressum-items text-font" style="display: none">Hinweis auf gewerbliche oder berufsrechtliche Vorschriften</li>
                         <li class="impressum-items text-font" style="display: none">UID</li>
-                        <li class="impressum-items text-font">Vorderschneeberg 144, 5630 Bad Hofgastein, Austria</li>
                         <li class="impressum-items text-font" style="margin-top: +2vh;">Wir haften nicht für Inhalte auf externen Links.</li>
                         <li class="impressum-items text-font">Wir behalten uns das Recht vor Änderungen an Ticket Preisen und dem Programm vorzunehmen.</li>
                     </ul>
@@ -125,12 +124,12 @@
                 <div title="Social" class="social">
                     <h4 class="text-font">Folge uns:</h4>
                     <div class="social-links">
-                        <a href="https://www.instagram.com/" target="_blank"><img alt="Instagram-Icon" src="Images/Icons/instagram_1384015.png" class="social-icons"></a>
-                        <p class="text-font impressum-items">@G-Stone-Rock</p>
+                        <a href="https://www.instagram.com/g_stone_rockfestival/" target="_blank"><img alt="Instagram-Icon" src="Images/Icons/instagram_1384015.png" class="social-icons"></a>
+                        <p class="text-font impressum-items">@g_stone_rockfestival</p>
                     </div>
                     <div class="social-links">
-                        <a href="https://www.facebook.com/" target="_blank"><img alt="Facebook-Icon" src="Images/Icons/facebook_2168281.png" class="social-icons"></a>
-                        <p class="text-font impressum-items">G-Stone-Rock</p>
+                        <a href="https://www.facebook.com/profile.php?id=61575282849913" target="_blank"><img alt="Facebook-Icon" src="Images/Icons/facebook_2168281.png" class="social-icons"></a>
+                        <p class="text-font impressum-items">G-Stone Rock Festival</p>
                     </div>
                     <div class="social-links">
                         <a href="mailto:organisation@gstonerock.at" target="_blank"><img alt="E-Mail-Icon" src="Images/Icons/email_3178158.png" class="social-icons"></a>
