--- a/index.html
+++ b/index.html
@@ -62,16 +62,12 @@
                 <h2 class="logo-font datum-1">2025</h2>
                 <h3 class="heading-font datum-2">31.07.-02.08.</h3>
             </div>
-            <script>
-                 window.onload = function() {
-                    alert("Wir behalten uns vor manche Informationen zu ändern. Das Festival findet vom 31.07.-02.08.2025 statt.");
-                    };
-                    
+            <script>            
                     document.addEventListener("DOMContentLoaded", () => {
                     document.querySelectorAll('.Keinverweis').forEach(item => {
                     item.addEventListener('click', (event) => {
                     event.preventDefault(); // Verhindert mögliche Standardaktionen
-                     alert('Diese Seite ist noch nicht verfügbar!');
+                     alert('Diese Seite ist bald verfügbar!');
             });
         });
     });
@@ -89,21 +85,21 @@
                     </a>
 
                     <div class="card side l">
-                        <img src="Images/Bilder-Info-Karten/Aktivitäten-Bild-Neu.jpg" 
+                        <img src="Images/Bilder-Info-Karten/Aktivitäten-Bild.png" 
                         class="carousel-karte-bild" alt="2 Personen in Badekleidung stoßen an">
                         <h4 class="heading-font main-color-2 karte-überschrift">Aktivitäten</h4>
                         <p class=" text-font main-color-2 karte-text">Die Aktivitäten beim G-Stone Rock Festival bieten ein vielseitiges Erlebnis: Entspannte Stunden am Badesee oder Erkundungstouren in die umliegende Natur. Dank Kooperationen mit lokalen Betrieben erwartet dich ein abwechslungsreiches Zusatzprogramm.</p>
-                        <a title="Button Mehr Infos" class="rahmen-button-gelb karte-button" onclick="alert('Diese Seite ist bald verfügbar')">Mehr Infos</a>
+                        <a title="Button Mehr Infos" class="rahmen-button-gelb karte-button" onclick="alert('Diese Seite ist bald verfügbar!')">Mehr Infos</a>
                     </div>
                     <div class="card main" title="Location">
-                        <img src="Images/Bilder-Info-Karten/Nices-Badeseebild.jpg" class="carousel-karte-bild" alt="Bild des Gasteiner Badesees">
+                        <img src="Images/Bilder-Info-Karten/Location - Neu.png" class="carousel-karte-bild" alt="Bild des Gasteiner Badesees">
                         <h4 class="heading-font main-color-2 karte-überschrift">Location - Gasteiner Badesee</h4>
                         <p class="text-font main-color-2 karte-text">Der Gasteiner Badesee, umrahmt von Wäldern und den majestätischen Alpen, bietet die perfekte Festival-Location: Camping direkt am Wasser, atemberaubende Natur und eine unvergleichliche Atmosphäre machen dein Musikerlebnis unvergesslich!</p>
                         <a title="Button Mehr Infos" class="rahmen-button-gelb karte-button" href="https://www.gasteinertal.com/badesee/" target="_blank">Mehr Infos</a>
                     </div>
                     <div class="card side r">
-                        <img src="Images/Bilder-Info-Karten/Gastronomie-Bild.jpg" 
-                            class="carousel-karte-bild" alt="Bild von gesundem Essen">
+                        <img src="Images/Bilder-Info-Karten/Gastronomie - Neu.png" 
+                            class="carousel-karte-bild" alt="Bild einem erfrischenden Getränk">
                         <h4 class="heading-font main-color-2 karte-überschrift">Gastronomie</h4>
                         <p class=" text-font main-color-2 karte-text">Kulinarische Vielfalt trifft auf Nachhaltigkeit: Das G-Stone Rock Festival setzt auf regionale Zutaten und ein umfangreiches veganes Angebot, das von herzhaften Klassikern bis zu kreativen Spezialitätenreicht – Genuss mit Verantwortung.</p>
                     </div>
@@ -114,7 +110,7 @@
                         <p class=" text-font main-color-2 karte-text">Nachhaltigkeit steht im Mittelpunkt: Das G-Stone Rock Festival setzt auf umweltfreundliche Konzepte wie Recycling-Stationen und regionale Partnerschaften – für ein Festival, das Spaß macht und zugleich die Natur schützt.</p>
                     </div>
                     <div class="card hidden">
-                        <img src="Images/Bilder-Info-Karten/Gasteiner-Tal.jpg" 
+                        <img src="Images/Bilder-Info-Karten/Gasteiner Tal - Neu.png" 
                             class="carousel-karte-bild" alt="Bild des Gasteiner Tals">
                         <h4 class="heading-font main-color-2 karte-überschrift">Gasteiner Tal</h4>
                         <p class=" text-font main-color-2 karte-text">Eingebettet in die imposante Natur der Salzburger Alpen, erstreckt sich das Gasteinertal. Geformt von den höchsten Grasbergen der Ostalpen, umrandet von den 3.000er der Hohen Tauern und heißen wohltuenden Thermalquellen, vereint Gastein die fazinierende Kraft von Berg und Wasser.</p>
@@ -249,7 +245,6 @@
                         <li class="impressum-items text-font" style="display: none">Berufsbezeichnung und Mitgliedsstaat</li>
                         <li class="impressum-items text-font" style="display: none">Hinweis auf gewerbliche oder berufsrechtliche Vorschriften</li>
                         <li class="impressum-items text-font" style="display: none">UID</li>
-                        <li class="impressum-items text-font">Vorderschneeberg 144, 5630 Bad Hofgastein, Austria</li>
                         <li class="impressum-items text-font" style="margin-top: +2vh;">Wir haften nicht für Inhalte auf externen Links.</li>
                         <li class="impressum-items text-font">Wir behalten uns das Recht vor Änderungen an Ticket Preisen und dem Programm vorzunehmen.</li>
                     </ul>
@@ -261,8 +256,8 @@
                         <p class="text-font impressum-items">@g_stone_rockfestival</p>
                     </div>
                     <div class="social-links">
-                        <a href="https://www.facebook.com/" target="_blank"><img alt="Facebook-Icon" src="Images/Icons/facebook_2168281.png" class="social-icons"></a>
-                        <p class="text-font impressum-items">G-Stone-Rock</p>
+                        <a href="https://www.facebook.com/profile.php?id=61575282849913" target="_blank"><img alt="Facebook-Icon" src="Images/Icons/facebook_2168281.png" class="social-icons"></a>
+                        <p class="text-font impressum-items">G-Stone Rock Festival</p>
                     </div>
                     <div class="social-links">
                         <a href="mailto:organisation@gstonerock.at" target="_blank"><img alt="E-Mail-Icon" src="Images/Icons/email_3178158.png" class="social-icons"></a>
