Webps statt bildern

--- a/Zeltwiese.html
+++ b/Zeltwiese.html
@@ -52,7 +52,7 @@
             </div>
         </section>
         <main title="Zeltwiese-Überblick" id="Zeltwiese-Überblick" class="Zeltwiese-Überblick">
-            <img src="Images/Bilder-Camping/Zeltwiese-Überblick.jpg" alt="Zeltwiese-Überblick" class="Zeltwiese-Überblick-Bild">
+            <img src="Images/Bilder-Camping/Zeltwiese-Überblick.webp" alt="Zeltwiese-Überblick" class="Zeltwiese-Überblick-Bild">
             <div title="Buttons" class="Zeltwiese-Überblick-Buttons">
                 <a title="Zeltwiesen-Bereiche" href="#Zeltwiese" class="rahmen-button-gelb Zeltwiese-Überblick-button"> Zeltwiese</a>
                 <a title="Wasser, Strom" href="#Wasser-Strom" class="rahmen-button-gelb Zeltwiese-Überblick-button">Wasser, Strom</a>
@@ -124,15 +124,15 @@
                 <div title="Social" class="social">
                     <h4 class="text-font">Folge uns:</h4>
                     <div class="social-links">
-                        <a href="https://www.instagram.com/g_stone_rockfestival/" target="_blank"><img alt="Instagram-Icon" src="Images/Icons/instagram_1384015.png" class="social-icons"></a>
+                        <a href="https://www.instagram.com/g_stone_rockfestival/" target="_blank"><img alt="Instagram-Icon" src="Images/Icons/instagram_1384015.webp" class="social-icons"></a>
                         <p class="text-font impressum-items">@g_stone_rockfestival</p>
                     </div>
                     <div class="social-links">
-                        <a href="https://www.facebook.com/profile.php?id=61575282849913" target="_blank"><img alt="Facebook-Icon" src="Images/Icons/facebook_2168281.png" class="social-icons"></a>
+                        <a href="https://www.facebook.com/profile.php?id=61575282849913" target="_blank"><img alt="Facebook-Icon" src="Images/Icons/facebook_2168281.webp" class="social-icons"></a>
                         <p class="text-font impressum-items">G-Stone Rock Festival</p>
                     </div>
                     <div class="social-links">
-                        <a href="mailto:organisation@gstonerock.at" target="_blank"><img alt="E-Mail-Icon" src="Images/Icons/email_3178158.png" class="social-icons"></a>
+                        <a href="mailto:organisation@gstonerock.at" target="_blank"><img alt="E-Mail-Icon" src="Images/Icons/email_3178158.webp" class="social-icons"></a>
                         <p class="text-font impressum-items">organisation@gstonerock.at</p>
                     </div>
                 </div>
