--- a/index.html
+++ b/index.html
@@ -85,32 +85,32 @@
                     </a>
 
                     <div class="card side l">
-                        <img src="Images/Bilder-Info-Karten/Aktivitäten-Bild.png" 
+                        <img src="Images/Bilder-Info-Karten/Aktivitäten-Bild.webp" 
                         class="carousel-karte-bild" alt="2 Personen in Badekleidung stoßen an">
                         <h4 class="heading-font main-color-2 karte-überschrift">Aktivitäten</h4>
                         <p class=" text-font main-color-2 karte-text">Die Aktivitäten beim G-Stone Rock Festival bieten ein vielseitiges Erlebnis: Entspannte Stunden am Badesee oder Erkundungstouren in die umliegende Natur. Dank Kooperationen mit lokalen Betrieben erwartet dich ein abwechslungsreiches Zusatzprogramm.</p>
                         <a title="Button Mehr Infos" class="rahmen-button-gelb karte-button" onclick="alert('Diese Seite ist bald verfügbar!')">Mehr Infos</a>
                     </div>
                     <div class="card main" title="Location">
-                        <img src="Images/Bilder-Info-Karten/Location - Neu.png" class="carousel-karte-bild" alt="Bild des Gasteiner Badesees">
+                        <img src="Images/Bilder-Info-Karten/Location - Neu.webp" class="carousel-karte-bild" alt="Bild des Gasteiner Badesees">
                         <h4 class="heading-font main-color-2 karte-überschrift">Location - Gasteiner Badesee</h4>
                         <p class="text-font main-color-2 karte-text">Der Gasteiner Badesee, umrahmt von Wäldern und den majestätischen Alpen, bietet die perfekte Festival-Location: Camping direkt am Wasser, atemberaubende Natur und eine unvergleichliche Atmosphäre machen dein Musikerlebnis unvergesslich!</p>
                         <a title="Button Mehr Infos" class="rahmen-button-gelb karte-button" href="https://www.gasteinertal.com/badesee/" target="_blank">Mehr Infos</a>
                     </div>
                     <div class="card side r">
-                        <img src="Images/Bilder-Info-Karten/Gastronomie - Neu.png" 
+                        <img src="Images/Bilder-Info-Karten/Gastronomie - Neu.webp" 
                             class="carousel-karte-bild" alt="Bild einem erfrischenden Getränk">
                         <h4 class="heading-font main-color-2 karte-überschrift">Gastronomie</h4>
                         <p class=" text-font main-color-2 karte-text">Kulinarische Vielfalt trifft auf Nachhaltigkeit: Das G-Stone Rock Festival setzt auf regionale Zutaten und ein umfangreiches veganes Angebot, das von herzhaften Klassikern bis zu kreativen Spezialitätenreicht – Genuss mit Verantwortung.</p>
                     </div>
                     <div class="card hidden">
-                        <img src="Images/Bilder-Info-Karten/Nachhaltigkeit-Bild.jpg" 
+                        <img src="Images/Bilder-Info-Karten/Nachhaltigkeit-Bild.webp" 
                             class="carousel-karte-bild" alt="Bild von Sprösslingen">
                         <h4 class="heading-font main-color-2 karte-überschrift">Nachhaltigkeit</h4>
                         <p class=" text-font main-color-2 karte-text">Nachhaltigkeit steht im Mittelpunkt: Das G-Stone Rock Festival setzt auf umweltfreundliche Konzepte wie Recycling-Stationen und regionale Partnerschaften – für ein Festival, das Spaß macht und zugleich die Natur schützt.</p>
                     </div>
                     <div class="card hidden">
-                        <img src="Images/Bilder-Info-Karten/Gasteiner Tal - Neu.png" 
+                        <img src="Images/Bilder-Info-Karten/Gasteiner Tal - Neu.webp" 
                             class="carousel-karte-bild" alt="Bild des Gasteiner Tals">
                         <h4 class="heading-font main-color-2 karte-überschrift">Gasteiner Tal</h4>
                         <p class=" text-font main-color-2 karte-text">Eingebettet in die imposante Natur der Salzburger Alpen, erstreckt sich das Gasteinertal. Geformt von den höchsten Grasbergen der Ostalpen, umrandet von den 3.000er der Hohen Tauern und heißen wohltuenden Thermalquellen, vereint Gastein die fazinierende Kraft von Berg und Wasser.</p>
@@ -124,7 +124,7 @@
             <script src="Carousel-Skript.js"></script>
         </section>
         <section title="Line-Up & Tickets" class="line-up-tickets">
-            <img src="Images/Bilder-Tickets-Line-Up/Plakat Blur.png" alt="Plakat mit Line-Up" class="plakat-line-up" id="Line-Up">
+            <img src="Images/Bilder-Tickets-Line-Up/Plakat Blur.webp" alt="Plakat mit Line-Up" class="plakat-line-up" id="Line-Up">
             <div title="Tickets" class="tickets-container" id="Tickets">
                 <h1 class="heading-font main-color-2 tickets-überschrift">Tickets</h1>
                 <div class="preis-und-button">
@@ -148,23 +148,23 @@
                 </a>
                 <div class="bands-carousel-item-track">
                     <div class="band band-side band-l">
-                        <img src="Images/Bilder-Bands/fallinghigh.jpg" alt="Foto der Band Falling High" class="band-foto">
+                        <img src="Images/Bilder-Bands/fallinghigh.webp" alt="Foto der Band Falling High" class="band-foto">
                         <a class="heading-font main-color-2 bandname">Falling High</a>
                     </div>
                     <div class="band band-side band-ml">
-                        <img src="Images/Bilder-Bands/AHARA.jpg" alt="Foto der Band Ahara" class="band-foto">
+                        <img src="Images/Bilder-Bands/AHARA.webp" alt="Foto der Band Ahara" class="band-foto">
                         <a class="heading-font main-color-2 bandname">Ahara</a>
                     </div>
                     <div class="band spotlight-band">
-                        <img src="Images/Bilder-Bands/Dopamine.png" alt="Foto der Band Dopamine" class="band-foto">
+                        <img src="Images/Bilder-Bands/Dopamine.webp" alt="Foto der Band Dopamine" class="band-foto">
                         <a class="heading-font main-color-2 bandname">Dopamine</a>
                     </div>
                     <div class="band band-side band-mr">
-                        <img src="Images/Bilder-Bands/Hay-Fever.jpg" alt="Foto der Band Hay Fever" class="band-foto">
+                        <img src="Images/Bilder-Bands/Hay-Fever.webp" alt="Foto der Band Hay Fever" class="band-foto">
                         <a class="heading-font main-color-2 bandname">Hay Fever</a>
                     </div>
                     <div class="band band-side band-r">
-                        <img src="Images/Bilder-Bands/Yellow-Furniture.jpg" alt="Foto der Band main-color-2 Furniture" class="band-foto">
+                        <img src="Images/Bilder-Bands/Yellow-Furniture.webp" alt="Foto der Band main-color-2 Furniture" class="band-foto">
                         <a class="heading-font main-color-2 bandname-zulang">Yellow-Furniture</a>
                     </div>
                     
@@ -181,7 +181,7 @@
         </div>
         <div id="lageplan" title="Lageplan" class="lageplan">
             <div class="lageplan-container">
-                <img alt="Lageplan" src="Images/Bilder-Camping/Lageplan.jpg" class="lageplan-bild">
+                <img alt="Lageplan" src="Images/Bilder-Camping/Lageplan.webp" class="lageplan-bild">
                 <div title="Buttons" class="lageplan-buttons">
                     <a title="Camping" href="Zeltwiese.html" class="rahmen-button-lila lageplan-button">
                         Zeltwiese
@@ -210,22 +210,22 @@
                     </svg>
                 </div>
                 <div class="partner-logo-reihe">
-                    <img class="partner-logo-item" alt="Sponsoren-Logo" src="Images/Sponsoring-Logos/Example_Logo.png">
-                    <img class="partner-logo-item" alt="Sponsoren-Logo" src="Images/Sponsoring-Logos/Example_Logo.png">
-                    <img class="partner-logo-item" alt="Sponsoren-Logo" src="Images/Sponsoring-Logos/Example_Logo.png">
-                    <img class="partner-logo-item" alt="Sponsoren-Logo" src="Images/Sponsoring-Logos/Example_Logo.png">
+                    <img class="partner-logo-item" alt="Sponsoren-Logo" src="Images/Sponsoring-Logos/Example_Logo.webp">
+                    <img class="partner-logo-item" alt="Sponsoren-Logo" src="Images/Sponsoring-Logos/Example_Logo.webp">
+                    <img class="partner-logo-item" alt="Sponsoren-Logo" src="Images/Sponsoring-Logos/Example_Logo.webp">
+                    <img class="partner-logo-item" alt="Sponsoren-Logo" src="Images/Sponsoring-Logos/Example_Logo.webp">
                 </div>
                 <div class="partner-logo-reihe">
-                    <img class="partner-logo-item" alt="Sponsoren-Logo" src="Images/Sponsoring-Logos/Example_Logo.png">
-                    <img class="partner-logo-item" alt="Sponsoren-Logo" src="Images/Sponsoring-Logos/Example_Logo.png">
-                    <img class="partner-logo-item" alt="Sponsoren-Logo" src="Images/Sponsoring-Logos/Example_Logo.png">
-                    <img class="partner-logo-item" alt="Sponsoren-Logo" src="Images/Sponsoring-Logos/Example_Logo.png">
+                    <img class="partner-logo-item" alt="Sponsoren-Logo" src="Images/Sponsoring-Logos/Example_Logo.webp">
+                    <img class="partner-logo-item" alt="Sponsoren-Logo" src="Images/Sponsoring-Logos/Example_Logo.webp">
+                    <img class="partner-logo-item" alt="Sponsoren-Logo" src="Images/Sponsoring-Logos/Example_Logo.webp">
+                    <img class="partner-logo-item" alt="Sponsoren-Logo" src="Images/Sponsoring-Logos/Example_Logo.webp">
                 </div>
                 <div class="partner-logo-reihe">
-                    <img class="partner-logo-item" alt="Sponsoren-Logo" src="Images/Sponsoring-Logos/Example_Logo.png">
-                    <img class="partner-logo-item" alt="Sponsoren-Logo" src="Images/Sponsoring-Logos/Example_Logo.png">
-                    <img class="partner-logo-item" alt="Sponsoren-Logo" src="Images/Sponsoring-Logos/Example_Logo.png">
-                    <img class="partner-logo-item" alt="Sponsoren-Logo" src="Images/Sponsoring-Logos/Example_Logo.png">
+                    <img class="partner-logo-item" alt="Sponsoren-Logo" src="Images/Sponsoring-Logos/Example_Logo.webp">
+                    <img class="partner-logo-item" alt="Sponsoren-Logo" src="Images/Sponsoring-Logos/Example_Logo.webp">
+                    <img class="partner-logo-item" alt="Sponsoren-Logo" src="Images/Sponsoring-Logos/Example_Logo.webp">
+                    <img class="partner-logo-item" alt="Sponsoren-Logo" src="Images/Sponsoring-Logos/Example_Logo.webp">
                 </div>
             </div>  
             
@@ -252,15 +252,15 @@
                 <div title="Social" class="social">
                     <h4 class="text-font">Folge uns:</h4>
                     <div class="social-links">
-                        <a href="https://www.instagram.com/g_stone_rockfestival/" target="_blank"><img alt="Instagram-Icon" src="Images/Icons/instagram_1384015.png" class="social-icons"></a>
+                        <a href="https://www.instagram.com/g_stone_rockfestival/" target="_blank"><img alt="Instagram-Icon" src="Images/Icons/instagram_1384015.webp" class="social-icons"></a>
                         <p class="text-font impressum-items">@g_stone_rockfestival</p>
                     </div>
                     <div class="social-links">
-                        <a href="https://www.facebook.com/profile.php?id=61575282849913" target="_blank"><img alt="Facebook-Icon" src="Images/Icons/facebook_2168281.png" class="social-icons"></a>
+                        <a href="https://www.facebook.com/profile.php?id=61575282849913" target="_blank"><img alt="Facebook-Icon" src="Images/Icons/facebook_2168281.webp" class="social-icons"></a>
                         <p class="text-font impressum-items">G-Stone Rock Festival</p>
                     </div>
                     <div class="social-links">
-                        <a href="mailto:organisation@gstonerock.at" target="_blank"><img alt="E-Mail-Icon" src="Images/Icons/email_3178158.png" class="social-icons"></a>
+                        <a href="mailto:organisation@gstonerock.at" target="_blank"><img alt="E-Mail-Icon" src="Images/Icons/email_3178158.webp" class="social-icons"></a>
                         <p class="text-font impressum-items">organisation@gstonerock.at</p>
                     </div>
                 </div>
