--- a/FAQ.html
+++ b/FAQ.html
@@ -205,15 +205,15 @@
                 <div title="Social" class="social">
                     <h4 class="text-font">Folge uns:</h4>
                     <div class="social-links">
-                        <a href="https://www.instagram.com/g_stone_rockfestival/" target="_blank"><img alt="Instagram-Icon" src="Images/Icons/instagram_1384015.png" class="social-icons"></a>
+                        <a href="https://www.instagram.com/g_stone_rockfestival/" target="_blank"><img alt="Instagram-Icon" src="Images/Icons/instagram_1384015.webp" class="social-icons"></a>
                         <p class="text-font impressum-items">@g_stone_rockfestival</p>
                     </div>
                     <div class="social-links">
-                        <a href="https://www.facebook.com/profile.php?id=61575282849913" target="_blank"><img alt="Facebook-Icon" src="Images/Icons/facebook_2168281.png" class="social-icons"></a>
+                        <a href="https://www.facebook.com/profile.php?id=61575282849913" target="_blank"><img alt="Facebook-Icon" src="Images/Icons/facebook_2168281.webp" class="social-icons"></a>
                         <p class="text-font impressum-items">G-Stone Rock Festival</p>
                     </div>
                     <div class="social-links">
-                        <a href="mailto:organisation@gstonerock.at" target="_blank"><img alt="E-Mail-Icon" src="Images/Icons/email_3178158.png" class="social-icons"></a>
+                        <a href="mailto:organisation@gstonerock.at" target="_blank"><img alt="E-Mail-Icon" src="Images/Icons/email_3178158.webp" class="social-icons"></a>
                         <p class="text-font impressum-items">organisation@gstonerock.at</p>
                     </div>
                 </div>
