--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div title="Text Startseite" class="bg-text-startseite">
                 <h4 class="heading-font main-color-1 überschrift-startseite">G-Stone Rock Festival</h4>
                 <p class="text-font main-color-1 text-startseite">
-                    Das G-Stone Rock Festival ist ein mehrtägiges Musikfestival am Gasteiner Badesee, das lokaler Rock-Musik aus Salzburg eine Bühne bietet. Live-Musik mit Camping in der malerischen Gasteiner Alpenkulisse, umgeben von Natur, Wanderwegen mit guter Verkehrsanbindung. Es bietet zudem einen starken Fokus auf Nachhaltigkeit und ein vielfältiges veganes Gastronomieangebot.
+                    Das G-Stone Rock Festival ist ein mehrtägiges Musikfestival am Gasteiner Badesee, das lokaler Rock-Musik aus Salzburg eine Bühne bietet. Live-Musik mit Camping in der malerischen Gasteiner Alpenkulisse, umgeben von Natur und Wanderwegen mit guter Verkehrsanbindung. Es wird zudem viel Wert auf Nachhaltigkeit und ein vielfältiges Gastronomieangebot gelegt.
                 </p>
                 <div title="Buttons" class="startseite-buttons-container heading-font main-color-2">
                     <a title="Tickets" href="#Tickets" class="gefüllter-button-lila">
@@ -235,7 +235,7 @@
                 <div title="Impressum" class="impressum" id="impressum">
                     <h4 class="text-font">Impressum</h4>
                     <ul>
-                        <li class="impressum-items text-font" style="margin-top: +2vh;">Kunstverein Rote Brennessel</li>
+                        <li class="impressum-items text-font" style="margin-top: +2vh;">Kunstverein Rote Brennnessel</li>
                         <li class="impressum-items text-font">Vorderschneeberg 144, 5630 Bad Hofgastein, Austria</li>  
                         <li class="impressum-items text-font">06803127774</li>
                         <li class="impressum-items text-font">organisation@gstonerock.at</li>
@@ -246,7 +246,7 @@
                         <li class="impressum-items text-font" style="display: none">Hinweis auf gewerbliche oder berufsrechtliche Vorschriften</li>
                         <li class="impressum-items text-font" style="display: none">UID</li>
                         <li class="impressum-items text-font" style="margin-top: +2vh;">Wir haften nicht für Inhalte auf externen Links.</li>
-                        <li class="impressum-items text-font">Wir behalten uns das Recht vor Änderungen an Ticket Preisen und dem Programm vorzunehmen.</li>
+                        <li class="impressum-items text-font">Wir behalten uns das Recht vor Änderungen an Ticketpreisen und dem Programm vorzunehmen.</li>
                     </ul>
                 </div>
                 <div title="Social" class="social">
